# Voidstrap

./: .gitignore  CNAME  Hellstrap.sln  LICENSE.VOIDSTRAP  LICENSE.md  Max  Open to publish EXE.txt  README.md  Read  Voidstrap.sln  dotnet  supporters.json  supportersdata.json  supportersdata3.json  supportersdata5.json  supportersdata7.json  with latest manual changes
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: ci-debug.yml  ci-release.yml  main.yml
Bloxstrap/: App.xaml  App.xaml.cs  Bootstrapper.cs  CpuCoreLimiter.cs  FastFlagManager.cs  GBSEditor.cs  GlobalCache.cs  GlobalUsings.cs  Hellstrap.csproj  HttpClientLoggingHandler.cs  Installer.cs  JsonManager.cs  LaunchHandler.cs  LaunchSettings.cs  Locale.cs  Logger.cs  Paths.cs  Resource.cs  Utilities.cs  Voidstrap.csproj  Watcher.cs
Bloxstrap/AppData/: CommonAppData.cs  IAppData.cs  RobloxPlayerData.cs  RobloxStudioData.cs
Bloxstrap/Enums/: BootstrapperIcon.cs  BootstrapperStyle.cs  CursorType.cs  EmojiType.cs  ErrorCode.cs  GenericTriState.cs  LaunchMode.cs  NextAction.cs  ServerType.cs  Theme.cs  VersionComparison.cs
Bloxstrap/Exceptions/: AssertionException.cs  ChecksumFailedException.cs  CustomThemeException.cs  HttpResponseException.cs  InvalidChannelException.cs  InvalidHTTPResponseException.cs
Bloxstrap/Extensions/: BootstrapperIconEx.cs  BootstrapperStyleEx.cs  CustomThemeTemplateEx.cs  DateTimeEx.cs  DesktopCaptureMotionBlur.cs  EmojiTypeEx.cs  IconEx.cs  (+5 more)
Datacenters/: README.md  ServerFetch.json
NipProfiles/: Voidstrap.nip
Tests/SwiftTunnel/swifttunnel-vpn-native/: Cargo.toml  README.md
Tests/SwiftTunnel/swifttunnel-vpn-native/src/: error.rs  lib.rs  split_tunnel.rs  vpn.rs  wfp.rs
Voidstrap/: Wpf.Ui.deps.json
(+332 files in other folders)
